Applicato Fixed al banner - Aggiunti z-index per il logo e il banner

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header{
 
 header img{
     width: 120px;
+    z-index: 2;
 }
 
 ul{
@@ -147,8 +148,8 @@ main{
     overflow-y: auto;
 }
 
-main div{
-    border: 1px solid red;  
+main > div{
+    padding: 20px 0;
 }
 
 main h2{
@@ -162,6 +163,10 @@ main h2,h3 {
 /* MAIN:  .banner SECTION */
 
 main .banner{
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1;
     height: 70px;
     width: 100%;
     background-color: var(--trasparent-banner);
@@ -174,7 +179,7 @@ main .banner{
     color: var(--white);
     background-color: transparent;
     font-size: 0.7rem;
-    margin-right: 10px;
+    margin-right: 30px;
     padding: 12px 30px;
     border: 1.5px solid var(--white);
     border-radius: 30px;
@@ -196,6 +201,7 @@ main .category{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin-top: 70px;
 }
 
 main .category a{
